<resources>
    <string name="app_name">MasterShopping-ISIL</string>
    <string name="sign_up">Sign up</string>
    <string name="enter_the_password">Enter the Password</string>
    <string name="enter_the_email">Enter the Gmail</string>
    <string name="forgot_password">Forgot password ?</string>
    <string name="log_in">Log in</string>
    <string name="enter_the_gmail">Enter the gmail</string>
    <string name="btn_sign_up">Sign up</string>
    <string name="enter_the_name">Enter the name</string>
    <string name="sign_up_with_facebook">Sign up with Facebook</string>
    <string name="sign_up_with_google">Sign up with Google</string>
    <string name="not_a_membert">Not a membert?</string>
    <string name="join_now">Join now</string>
    <string name="already_have_account">Already have an account</string>
    <string name="profile">Profile photo</string>
    <string name="my_orders">My orders</string>
    <string name="sofia">Sofia</string>
    <string name="my_payment_cards">My payment cards</string>
    <string name="change_address">Change Address</string>
    <string name="notifications">Notifications</string>
    <string name="inbox">Inbox</string>
    <string name="about_us">About us</string>
    <string name="logout">Logout</string>
    <string name="edit_profile">Edit profile</string>
    <string name="gmail">sofia@gmail.com</string>
    <string name="phone">987654321</string>
    <string name="address">153/3, las palmeras</string>
    <string name="share_promocodes">Share promocodes</string>
    <string name="psw">12345</string>
    <string name="checkout">Checkout</string>
    <string name="title">Hot corn chikern</string>
    <string name="descriptionFood">A delicious creamy corm soup made with sweet com vegetables chiken herbs and spices</string>
    <string name="food">image food</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="delivery_address">Delivery Address</string>
    <string name="_153_3_las_palmeras">153/3, las palmeras</string>
    <string name="change">Change</string>
    <string name="payment_method">Payment Method</string>
    <string name="add_card">+ Add card</string>
    <string name="send_order">Send Order</string>
    <string name="what_at_you_lookign_at">What at you lookign at?</string>
    <string name="coffe_shop">Coffe Shop</string>
    <string name="nombre_cafeteria">Nombre Cafeteria</string>
    <string name="lorem">Lorem</string>
    <string name="favorites">Favorites</string>
    <string name="todo">TODO</string>
    <string name="todos">TODO</string>
    <string name="todoss">TODO</string>
    <string name="lorem_ipsum">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</string>
    <string name="todosa">TODO</string>
    <string name="todoasd">TODO</string>
    <string name="textview">TextView</string>
    <string name="todoas">TODO</string>
    <string name="as">TODO</string>
    <string name="todoasas">TODO</string>
    <string name="todoasdas">TODO</string>
    <string name="asas">TODO</string>
    <string name="asass">TODO</string>
    <string name="todoasa">TODO</string>
    <string name="todoaasas">TODO</string>
    <string name="asasa">TODO</string>
    <string name="todoasad">TODO</string>
    <string name="todoass">TODO</string>
    <string name="todoasasa">TODO</string>
    <string name="todoasaa">TODO</string>
    <string name="todoasasasas">TODO</string>
    <string name="todoasassa">TODO</string>
    <string name="todoa">TODO</string>
    <string name="todoaa">TODO</string>
    <string name="_4_5">4.5</string>
    <string name="_4_00">4.0</string>
    <string name="_4_51">4.5</string>
</resources>