<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <EditText
        android:id="@+id/edtAddress_User"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_marginTop="58dp"
        android:autofillHints=""
        android:background="@drawable/edt_rounded"
        android:elevation="10dp"
        android:ems="10"
        android:fontFamily="sans-serif-medium"
        android:hint="@string/enter_the_gmail"
        android:inputType="textEmailAddress"
        android:paddingStart="25dp"
        android:paddingEnd="25dp"
        android:shadowColor="#D50000"
        android:textColor="@color/color_blackblack"
        android:textColorHint="@color/text_holder"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView10"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/edt_PaswordUser"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_marginTop="15dp"
        android:autofillHints=""
        android:background="@drawable/edt_rounded"
        android:backgroundTint="#E2E2E2"
        android:elevation="10dp"
        android:ems="10"
        android:fontFamily="sans-serif-medium"
        android:hint="@string/enter_the_password"
        android:inputType="textPassword"
        android:paddingStart="25dp"
        android:paddingEnd="25dp"
        android:textColor="@color/color_blackblack"
        android:textColorHint="@color/text_holder"
        android:textSize="14sp"
        app:cornerRadius="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtAddress_User"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/txt_Forgot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="86dp"
        android:layout_marginTop="10dp"
        android:text="@string/forgot_password"
        android:textColor="@color/text_holder"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_PaswordUser"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/btn_get_into"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_marginTop="40dp"
        android:backgroundTint="@color/red"
        android:fontFamily="@font/aclonica"

        android:shadowColor="#000000"
        android:shadowDy="10"
        android:text="@string/log_in"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="15sp"
        app:cornerRadius="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_Forgot"
        tools:ignore="TextContrastCheck,DuplicateSpeakableTextCheck" />

    <Button
        android:id="@+id/btn_login_G"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_marginTop="100dp"
        android:backgroundTint="#E2E2E2"
        android:drawableEnd="@drawable/icon_google"
        android:fontFamily="@font/aclonica"
        android:text="@string/sign_up_with_google"
        android:textAllCaps="false"
        android:textColor="@color/black"

        android:textSize="12sp"
        app:cornerRadius="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_get_into" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="108dp"
        android:layout_marginTop="10dp"
        android:text="@string/not_a_membert"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button5" />

    <TextView
        android:id="@+id/txtCreate_Account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/join_now"
        android:textColor="@color/text_join_now"
        app:layout_constraintStart_toEndOf="@+id/textView7"
        app:layout_constraintTop_toBottomOf="@+id/button5" />

    <Button
        android:id="@+id/button5"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_marginTop="12dp"
        android:backgroundTint="#E2E2E2"
        android:drawableEnd="@drawable/icon_facebook"
        android:fontFamily="@font/aclonica"
        android:shadowColor="@color/color_blackblack"
        android:shadowDx="20"
        android:shadowDy="20"
        android:text="@string/sign_up_with_facebook"
        android:textAllCaps="false"
        android:textColor="@color/black"

        android:textSize="12sp"
        app:cornerRadius="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_login_G" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:fontFamily="@font/aclonica"
        android:text="@string/log_in"
        android:textColor="@color/black"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>